# DB_project

./: .gitignore  README.md  main.py  pyproject.toml
src/: class_manager.py  db_hh.py  func.py
